Sidebar work to design

--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -73,13 +73,13 @@
     display: block
     font-weight: bold
     text-transform: uppercase
-    font-size: 80%
+    font-size: 14px
     color: $menu-color
     white-space: nowrap
     text-rendering: auto
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
-    font-weight: 100
+    font-weight: 200
 
   ul
     margin-bottom: 0
@@ -91,11 +91,11 @@
     &.current
       background: darken($menu-vertical-background-color, 10%)
       a
-        color: $menu-link-medium
-        border-right: solid 1px darken($menu-vertical-background-color, 20%)
-        padding: $gutter / 4 $gutter * 1.5
+        color: #fff
+        background-color: #F5F5F5        
         &:hover
-          background: $librato-yellow
+          color: #1280A9
+          background-color: #e0e0e0    
     code
       border: none
       background: inherit
@@ -109,7 +109,6 @@
       margin-left: -1.2em
       @extend .fa
       @extend .fa-plus-square-o
-      font-size: .8em
       line-height: 1.6em
       color: darken($menu-link-medium, 20%)
 
@@ -119,22 +118,26 @@
     padding: $gutter / 2 $gutter
     position: relative
     background: $librato-yellow
-    border: none
-    border-bottom: solid 1px darken($menu-vertical-background-color, 20%)
-    border-top: solid 1px darken($menu-vertical-background-color, 20%)
     padding-left: $gutter -4px
     +font-smooth
     &:hover
       background: $librato-yellow
+      color: #fff
       span.toctree-expand
         color: $menu-link-medium
     span.toctree-expand
       @extend .fa
       @extend .fa-minus-square-o
       display: block
-      font-size: .8em
       line-height: 1.6em
       color: darken($menu-link-medium, 30%)
+
+  li.toctree-l1
+    border-bottom: 1px solid #E0E0E0
+    &:first-child
+      border-top: 1px solid #E0E0E0
+    &:last-child
+      border-bottom: 1px solid #E0E0E0
 
   // This is the on state for pages beyond second level
   li.toctree-l1.current li.toctree-l2, li.toctree-l2.current li.toctree-l3
@@ -143,28 +146,32 @@
     &.current > ul
       display: block
   li.toctree-l2
+    color: #1B86AE
+    a 
+      color: #1B86AE
     &.current
       > a
-        background: #DCDCDC
-        color: #6F6F6F
+        background: #F5F5F5
+        color: #393939
       li.toctree-l3 > a
         display: block
-        color: #555
-        background: #edf0f2
-        padding: $gutter / 4 $gutter * 2.5
+        color: #1B86AE
+        background: #FBFBFB
+        padding-left: 40px
+        border-top: none
+        border-bottom: none
     a:hover span.toctree-expand
-      color: $menu-link-medium
+      color: #000
     span.toctree-expand
       color: #edf0f2
   li.toctree-l3
-    font-size: 1em
+    font-size: 14px
     &.current
       > a
-        background: darken($menu-vertical-background-color, 25%)
-        padding: $gutter / 4 $gutter * 2.5
+        background: #F5F5F5
+        color: #1B86AE
       li.toctree-l4 > a
         display: block
-        padding: $gutter / 4 $gutter * 3.5
         border-top: none
         border-bottom: none
     a:hover span.toctree-expand
@@ -172,7 +179,7 @@
     span.toctree-expand
       color: darken($menu-vertical-background-color, 40%)
   li.toctree-l4
-    font-size: 1em
+    font-size: 14px
 
   li.current ul
     display: block
@@ -192,13 +199,13 @@
     padding: $gutter / 2 $gutter
     display: block
     position: relative
-    font-size: 80%
+    font-size: 14px
     color: #0d81ab
     +font-smooth
     &:hover
-      background-color: $librato-yellow
+      background-color: #e0e0e0
       cursor: pointer
-      color: #fff
+      color: #1B86AE
       +font-smooth
       span.toctree-expand
         color: $menu-link-light
@@ -316,7 +323,7 @@
   overflow-x: hidden
   overflow-y: hidden
   min-height: 100%
-  background: $nav-background-color
+  background: #EAEAEA
   z-index: $z-index-popover
 
 .wy-side-scroll
