--- a/sass/_theme_librato.sass
+++ b/sass/_theme_librato.sass
@@ -1,6 +1,6 @@
 
 h1 
-  font-size: 2.5em
+  font-size: 28px
   font-weight: 100
   text-rendering: auto
   -webkit-font-smoothing: antialiased
@@ -71,9 +71,11 @@ h2
     float: left
     margin-right: 15px
     line-height: 40px
+    font-size: 14px
     a
       color: #fff
       font-weight: bold
+      font-size: 14px
       +font-smooth
       padding: 20px
       text-align: center
@@ -87,7 +89,7 @@ h2
   margin-right: 20px
   .icon
     padding: 6.5px
-    padding-left: 8px
+    padding-left: 12px
     margin-right: 0px
     background-color: #4199BA
     border-bottom-left-radius: 3px
