Update to search box

--- a/sass/_theme_librato.sass
+++ b/sass/_theme_librato.sass
@@ -72,6 +72,8 @@ h2
     margin-right: 15px
     line-height: 40px
     font-size: 14px
+    &:hover
+      border-bottom: 5px solid #1A9CC4
     a
       color: #fff
       font-weight: bold
@@ -96,11 +98,17 @@ h2
     border-top-left-radius: 3px
     i 
       color: #C4DFEA
+      position: relative
+      top: -1px
+      left: -2px
   .fa-search
     color: #C4DFEA
-    font-size: 13px
+    font-size: 14px
   input[type=text]
     float: right
+    width: 240px
+    border-bottom-right-radius: 3px
+    border-top-right-radius: 3px
 
 
 // W3C School:  www.w3schools.com/css/tryit.asp?filename=trycss_float5
