--- a/sass/_theme_breadcrumbs.sass
+++ b/sass/_theme_breadcrumbs.sass
@@ -13,6 +13,9 @@
     background: none
     &.literal
       color: $text-color
+  img
+    margin-right: 10px
+    width: 8px
 .wy-breadcrumbs-extra
   margin-bottom: 0
   color: $text-light
