--- a/sphinx_rtd_theme/static/css/theme.css
+++ b/sphinx_rtd_theme/static/css/theme.css
@@ -2563,9 +2563,9 @@ a .fa, a .wy-menu-vertical li span.toctree-expand, .wy-menu-vertical li a span.t
 }
 
 .wy-alert, .rst-content .note, .rst-content .attention, .rst-content .caution, .rst-content .danger, .rst-content .error, .rst-content .hint, .rst-content .important, .rst-content .tip, .rst-content .warning, .rst-content .seealso, .rst-content .admonition-todo {
-  padding: 11px;
-  line-height: 22px;
-  margin-bottom: 22px;
+  padding: 10px;
+  line-height: 20px;
+  margin-bottom: 20px;
   background: #bfe9f9;
 }
 
@@ -2575,9 +2575,9 @@ a .fa, a .wy-menu-vertical li span.toctree-expand, .wy-menu-vertical li a span.t
   display: block;
   color: #fff;
   background: #32baed;
-  margin: -11px;
-  padding: 5.5px 11px;
-  margin-bottom: 11px;
+  margin: -10px;
+  padding: 5px 10px;
+  margin-bottom: 10px;
 }
 
 .wy-alert.wy-alert-danger, .rst-content .wy-alert-danger.note, .rst-content .wy-alert-danger.attention, .rst-content .wy-alert-danger.caution, .rst-content .danger, .rst-content .error, .rst-content .wy-alert-danger.hint, .rst-content .wy-alert-danger.important, .rst-content .wy-alert-danger.tip, .rst-content .wy-alert-danger.warning, .rst-content .wy-alert-danger.seealso, .rst-content .wy-alert-danger.admonition-todo {
@@ -2636,7 +2636,7 @@ a .fa, a .wy-menu-vertical li span.toctree-expand, .wy-menu-vertical li a span.t
   color: #fff;
   text-align: center;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.1);
-  padding: 0 22px;
+  padding: 0 20px;
   min-width: 20%;
   opacity: 0;
   height: 0;
@@ -2702,7 +2702,7 @@ button[disabled] {
   text-align: center;
   cursor: pointer;
   font-size: 100%;
-  padding: 5.5px 11px 7.5px 11px;
+  padding: 5px 10px 7px 10px;
   color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #27AE60;
@@ -2739,7 +2739,7 @@ button[disabled] {
 }
 .btn:active {
   box-shadow: 0px -1px 0px 0px rgba(0, 0, 0, 0.05) inset, 0px 2px 0px 0px rgba(0, 0, 0, 0.1) inset;
-  padding: 7.5px 11px 5.5px 11px;
+  padding: 7px 10px 5px 10px;
 }
 .btn:visited {
   color: #fff;
@@ -2851,7 +2851,7 @@ button[disabled] {
 }
 
 .wy-btn-group {
-  margin-bottom: 22px;
+  margin-bottom: 20px;
   *zoom: 1;
 }
 .wy-btn-group:before, .wy-btn-group:after {
@@ -2882,7 +2882,7 @@ button[disabled] {
   z-index: 100;
   border: solid 1px #cfd7dd;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
-  padding: 11px;
+  padding: 10px;
 }
 .wy-dropdown-menu > dd > a {
   display: block;
@@ -2890,7 +2890,7 @@ button[disabled] {
   color: #404040;
   white-space: nowrap;
   font-size: 90%;
-  padding: 0 11px;
+  padding: 0 10px;
   cursor: pointer;
 }
 .wy-dropdown-menu > dd > a:hover {
@@ -2899,10 +2899,10 @@ button[disabled] {
 }
 .wy-dropdown-menu > dd.divider {
   border-top: solid 1px #cfd7dd;
-  margin: 5.5px 0;
+  margin: 5px 0;
 }
 .wy-dropdown-menu > dd.search {
-  padding-bottom: 11px;
+  padding-bottom: 10px;
 }
 .wy-dropdown-menu > dd.search input[type="search"] {
   width: 100%;
@@ -2932,7 +2932,7 @@ button[disabled] {
   margin-top: 2px;
 }
 .wy-dropdown.wy-dropdown-bubble .wy-dropdown-menu a {
-  padding: 5.5px 11px;
+  padding: 5px 10px;
 }
 .wy-dropdown.wy-dropdown-bubble .wy-dropdown-menu a:hover {
   background: #0f80aa;
@@ -2975,7 +2975,7 @@ button[disabled] {
   display: inline-block;
   vertical-align: middle;
   width: 10em;
-  margin: 5.5px 11px 0 0;
+  margin: 5px 10px 0 0;
   float: left;
 }
 .wy-form-aligned .wy-control {
@@ -2985,7 +2985,7 @@ button[disabled] {
   display: block;
 }
 .wy-form-aligned .wy-control select {
-  margin-top: 5.5px;
+  margin-top: 5px;
 }
 
 fieldset {
@@ -3000,7 +3000,7 @@ legend {
   border: 0;
   padding: 0;
   white-space: normal;
-  margin-bottom: 22px;
+  margin-bottom: 20px;
   font-size: 150%;
   *margin-left: -7px;
 }
@@ -3020,7 +3020,7 @@ input, select, textarea {
 }
 
 .wy-control-group {
-  margin-bottom: 22px;
+  margin-bottom: 20px;
   *zoom: 1;
   max-width: 68em;
   margin-left: auto;
@@ -3048,7 +3048,7 @@ input, select, textarea {
 }
 
 .wy-control-group .wy-form-full, .wy-control-group .wy-form-halves, .wy-control-group .wy-form-thirds {
-  padding-bottom: 11px;
+  padding-bottom: 10px;
 }
 .wy-control-group .wy-form-full select, .wy-control-group .wy-form-halves select, .wy-control-group .wy-form-thirds select {
   width: 100%;
@@ -3101,13 +3101,13 @@ input, select, textarea {
 }
 
 .wy-control-group.wy-control-group-no-input .wy-control {
-  margin: 5.5px 0 0 0;
+  margin: 5px 0 0 0;
   font-size: 90%;
 }
 
 .wy-control-no-input {
   display: inline-block;
-  margin: 5.5px 0 0 0;
+  margin: 5px 0 0 0;
   font-size: 90%;
 }
 
@@ -3133,7 +3133,7 @@ input, select, textarea {
 .wy-form-message p {
   font-size: inherit;
   font-style: italic;
-  margin-bottom: 5.5px;
+  margin-bottom: 5px;
 }
 .wy-form-message p:last-child {
   margin-bottom: 0;
@@ -3151,7 +3151,7 @@ input[type="button"], input[type="reset"], input[type="submit"] {
 }
 input[type="text"], input[type="password"], input[type="email"], input[type="url"], input[type="date"], input[type="month"], input[type="time"], input[type="datetime"], input[type="datetime-local"], input[type="week"], input[type="number"], input[type="search"], input[type="tel"], input[type="color"] {
   -webkit-appearance: none;
-  padding: 5.5px;
+  padding: 5px;
   display: inline-block;
   border: 1px solid #ccc;
   font-size: 80%;
@@ -3216,7 +3216,7 @@ input[type="file"]:focus:invalid:focus, input[type="radio"]:focus:invalid:focus,
 }
 
 input.wy-input-large {
-  padding: 11px;
+  padding: 10px;
   font-size: 100%;
 }
 
@@ -3260,7 +3260,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled] {
 }
 
 .wy-checkbox, .wy-radio {
-  margin: 5.5px 0;
+  margin: 5px 0;
   color: #404040;
   display: block;
 }
@@ -3277,7 +3277,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled] {
 
 .wy-input-prefix, .wy-input-suffix {
   white-space: nowrap;
-  padding: 5.5px;
+  padding: 5px;
 }
 .wy-input-prefix .wy-input-context, .wy-input-suffix .wy-input-context {
   line-height: 27px;
@@ -3298,9 +3298,9 @@ input[type="radio"][disabled], input[type="checkbox"][disabled] {
 }
 
 .wy-switch {
-  width: 33px;
-  height: 11px;
-  margin: 11px 0;
+  width: 30px;
+  height: 10px;
+  margin: 10px 0;
   position: relative;
   border-radius: 4px;
   background: #ccc;
@@ -3326,7 +3326,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled] {
 .wy-switch:after {
   content: "false";
   position: absolute;
-  left: 44px;
+  left: 40px;
   display: block;
   font-size: 12px;
   color: #ccc;
@@ -3336,7 +3336,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled] {
   background: #1e8449;
 }
 .wy-switch.active:before {
-  left: 22px;
+  left: 20px;
   background: #27AE60;
 }
 .wy-switch.active:after {
@@ -3465,7 +3465,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled] {
   .wy-form .wy-help-inline, .wy-form-message-inline, .wy-form-message {
     display: block;
     font-size: 80%;
-    padding: 5.5px 0;
+    padding: 5px 0;
   }
 }
 @media screen and (max-width: 768px) {
@@ -3496,7 +3496,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled] {
   border-collapse: collapse;
   border-spacing: 0;
   empty-cells: show;
-  margin-bottom: 22px;
+  margin-bottom: 20px;
 }
 .wy-table caption, .rst-content table.docutils caption, .rst-content table.field-list caption {
   color: #000;
@@ -3529,7 +3529,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled] {
 }
 
 .wy-table td p, .rst-content table.docutils td p, .rst-content table.field-list td p {
-  line-height: 16.5px;
+  line-height: 15px;
 }
 .wy-table td p:last-child, .rst-content table.docutils td p:last-child, .rst-content table.field-list td p:last-child {
   margin-bottom: 0;
@@ -3597,7 +3597,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled] {
 
 /* RESPONSIVE TABLES */
 .wy-table-responsive {
-  margin-bottom: 22px;
+  margin-bottom: 20px;
   max-width: 100%;
   overflow: auto;
 }
@@ -3709,10 +3709,10 @@ h1, h2, .rst-content .toctree-wrapper p.caption, h3, h4, h5, h6, legend {
 }
 
 p {
-  line-height: 22px;
+  line-height: 20px;
   margin: 0;
   font-size: 14px;
-  margin-bottom: 22px;
+  margin-bottom: 20px;
 }
 
 h1 {
@@ -3744,7 +3744,7 @@ hr {
   height: 1px;
   border: 0;
   border-top: 1px solid #e1e4e5;
-  margin: 22px 0;
+  margin: 20px 0;
   padding: 0;
 }
 
@@ -3765,12 +3765,12 @@ code.code-large, .rst-content tt.code-large {
 
 .wy-plain-list-disc, .rst-content .section ul, .rst-content .toctree-wrapper ul, article ul {
   list-style: disc;
-  line-height: 22px;
-  margin-bottom: 22px;
+  line-height: 20px;
+  margin-bottom: 20px;
 }
 .wy-plain-list-disc li, .rst-content .section ul li, .rst-content .toctree-wrapper ul li, article ul li {
   list-style: disc;
-  margin-left: 22px;
+  margin-left: 20px;
 }
 .wy-plain-list-disc li p:last-child, .rst-content .section ul li p:last-child, .rst-content .toctree-wrapper ul li p:last-child, article ul li p:last-child {
   margin-bottom: 0;
@@ -3790,12 +3790,12 @@ code.code-large, .rst-content tt.code-large {
 
 .wy-plain-list-decimal, .rst-content .section ol, .rst-content ol.arabic, article ol {
   list-style: decimal;
-  line-height: 22px;
-  margin-bottom: 22px;
+  line-height: 20px;
+  margin-bottom: 20px;
 }
 .wy-plain-list-decimal li, .rst-content .section ol li, .rst-content ol.arabic li, article ol li {
   list-style: decimal;
-  margin-left: 22px;
+  margin-left: 20px;
 }
 .wy-plain-list-decimal li p:last-child, .rst-content .section ol li p:last-child, .rst-content ol.arabic li p:last-child, article ol li p:last-child {
   margin-bottom: 0;
@@ -3810,8 +3810,8 @@ code.code-large, .rst-content tt.code-large {
 .codeblock-example {
   border: 1px solid #e1e4e5;
   border-bottom: none;
-  padding: 22px;
-  padding-top: 44px;
+  padding: 20px;
+  padding-top: 40px;
   font-weight: 500;
   background: #fff;
   position: relative;
@@ -3823,11 +3823,11 @@ code.code-large, .rst-content tt.code-large {
   left: 0px;
   background: #9B59B6;
   color: white;
-  padding: 5.5px 11px;
+  padding: 5px 10px;
 }
 .codeblock-example.prettyprint-example-only {
   border: 1px solid #e1e4e5;
-  margin-bottom: 22px;
+  margin-bottom: 20px;
 }
 
 .codeblock, pre.literal-block, .rst-content .literal-block, .rst-content pre.literal-block, div[class^='highlight'] {
@@ -3835,7 +3835,7 @@ code.code-large, .rst-content tt.code-large {
   padding: 0px;
   overflow-x: auto;
   background: #fff;
-  margin: 1px 0 22px 0;
+  margin: 1px 0 20px 0;
 }
 .codeblock div[class^='highlight'], pre.literal-block div[class^='highlight'], .rst-content .literal-block div[class^='highlight'], div[class^='highlight'] div[class^='highlight'] {
   border: none;
@@ -3850,7 +3850,7 @@ div[class^='highlight'] td.code {
 .linenodiv pre {
   border-right: solid 1px #e6e9ea;
   margin: 0;
-  padding: 11px 11px;
+  padding: 10px 10px;
   font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
   font-size: 12px;
   line-height: 1.5;
@@ -3860,7 +3860,7 @@ div[class^='highlight'] td.code {
 div[class^='highlight'] pre {
   white-space: pre;
   margin: 0;
-  padding: 11px 11px;
+  padding: 10px 10px;
   font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
   font-size: 12px;
   line-height: 1.5;
@@ -4400,6 +4400,11 @@ div[class^='highlight'] pre {
   display: block;
   border-top: none;
   border-bottom: none;
+  padding-left: 40px;
+}
+.wy-menu-vertical li.toctree-l3.current li.toctree-l4 > a.current > a {
+  background: #F5F5F5;
+  color: #1B86AE;
 }
 .wy-menu-vertical li.toctree-l3 a:hover span.toctree-expand {
   color: gray;
@@ -4409,6 +4414,10 @@ div[class^='highlight'] pre {
 }
 .wy-menu-vertical li.toctree-l4 {
   font-size: 14px;
+}
+.wy-menu-vertical li.toctree-l4.current > a {
+  background: #F5F5F5;
+  color: #393939;
 }
 .wy-menu-vertical li.current ul {
   display: block;
@@ -4485,7 +4494,7 @@ div[class^='highlight'] pre {
   font-size: 100%;
   font-weight: 100;
   display: inline-block;
-  padding: 3.66667px 5.5px;
+  padding: 3.33333px 5px;
   margin-bottom: 0.809em;
 }
 .wy-side-nav-search > a:hover, .wy-side-nav-search .wy-dropdown > a:hover {
@@ -4606,7 +4615,7 @@ div[class^='highlight'] pre {
   font-weight: bold;
 }
 .wy-nav-top img {
-  margin-right: 11px;
+  margin-right: 10px;
   height: 45px;
   width: 45px;
   background-color: #0f80aa;
@@ -4649,7 +4658,7 @@ footer {
   color: #999;
 }
 footer p {
-  margin-bottom: 11px;
+  margin-bottom: 10px;
 }
 footer span.commit code, footer span.commit .rst-content tt, .rst-content footer span.commit tt {
   padding: 0px;
@@ -4672,17 +4681,17 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
 }
 
 #search-results .search li {
-  margin-bottom: 22px;
+  margin-bottom: 20px;
   border-bottom: solid 1px #e1e4e5;
-  padding-bottom: 22px;
+  padding-bottom: 20px;
 }
 #search-results .search li:first-child {
   border-top: solid 1px #e1e4e5;
-  padding-top: 22px;
+  padding-top: 20px;
 }
 #search-results .search li a {
   font-size: 120%;
-  margin-bottom: 11px;
+  margin-bottom: 10px;
   display: inline-block;
 }
 #search-results .context {
@@ -4798,7 +4807,7 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   display: none;
 }
 .rst-versions .rst-current-version {
-  padding: 11px;
+  padding: 10px;
   background-color: #272525;
   display: block;
   text-align: right;
@@ -4836,7 +4845,7 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
 }
 .rst-versions .rst-other-versions {
   font-size: 90%;
-  padding: 11px;
+  padding: 10px;
   color: gray;
   display: none;
 }
@@ -4854,7 +4863,7 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
 }
 .rst-versions .rst-other-versions dd a {
   display: inline-block;
-  padding: 5.5px;
+  padding: 5px;
   color: #fcfcfc;
 }
 .rst-versions.rst-badge {
@@ -4884,7 +4893,7 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   width: auto;
   height: 30px;
   line-height: 30px;
-  padding: 0 5.5px;
+  padding: 0 5px;
   display: block;
   text-align: center;
 }
@@ -4912,7 +4921,7 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   height: auto !important;
 }
 .rst-content div.figure {
-  margin-bottom: 22px;
+  margin-bottom: 20px;
 }
 .rst-content div.figure p.caption {
   font-style: italic;
@@ -4921,12 +4930,12 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   text-align: center;
 }
 .rst-content .section > img, .rst-content .section > a > img {
-  margin-bottom: 22px;
+  margin-bottom: 20px;
 }
 .rst-content blockquote {
-  margin-left: 22px;
-  line-height: 22px;
-  margin-bottom: 22px;
+  margin-left: 20px;
+  line-height: 20px;
+  margin-bottom: 20px;
 }
 .rst-content .note .last, .rst-content .attention .last, .rst-content .caution .last, .rst-content .danger .last, .rst-content .error .last, .rst-content .hint .last, .rst-content .important .last, .rst-content .tip .last, .rst-content .warning .last, .rst-content .seealso .last, .rst-content .admonition-todo .last {
   margin-bottom: 0;
@@ -4948,25 +4957,25 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   list-style: upper-alpha;
 }
 .rst-content .section ol p, .rst-content .section ul p {
-  margin-bottom: 11px;
+  margin-bottom: 10px;
 }
 .rst-content .line-block {
-  margin-left: 22px;
+  margin-left: 20px;
 }
 .rst-content .topic-title {
   font-weight: bold;
-  margin-bottom: 11px;
+  margin-bottom: 10px;
 }
 .rst-content .toc-backref {
   color: #404040;
 }
 .rst-content .align-right {
   float: right;
-  margin: 0px 0px 22px 22px;
+  margin: 0px 0px 20px 20px;
 }
 .rst-content .align-left {
   float: left;
-  margin: 0px 22px 22px 0px;
+  margin: 0px 20px 20px 0px;
 }
 .rst-content .align-center {
   margin: auto;
@@ -4990,8 +4999,8 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   float: right;
   width: 40%;
   display: block;
-  margin: 0 0 22px 22px;
-  padding: 22px;
+  margin: 0 0 20px 20px;
+  padding: 20px;
   background: #f3f6f6;
   border: solid 1px #e1e4e5;
 }
@@ -5006,16 +5015,16 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   font-family: "Proxima Nova", "ff-tisa-web-pro", "Georgia", Arial, sans-serif;
   font-weight: bold;
   background: #e1e4e5;
-  padding: 5.5px 11px;
-  margin: -22px;
-  margin-bottom: 22px;
+  padding: 5px 10px;
+  margin: -20px;
+  margin-bottom: 20px;
   font-size: 100%;
 }
 .rst-content .highlighted {
   background: #fff1c2;
   display: inline-block;
   font-weight: normal;
-  padding: 0 5.5px;
+  padding: 0 5px;
 }
 .rst-content .footnote-reference, .rst-content .citation-reference {
   vertical-align: super;
@@ -5078,29 +5087,29 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   color: #0f80aa;
 }
 .rst-content dl {
-  margin-bottom: 22px;
+  margin-bottom: 20px;
 }
 .rst-content dl dt {
   font-weight: bold;
 }
 .rst-content dl p, .rst-content dl table, .rst-content dl ul, .rst-content dl ol {
-  margin-bottom: 11px !important;
+  margin-bottom: 10px !important;
 }
 .rst-content dl dd {
-  margin: 0 0 11px 22px;
+  margin: 0 0 10px 20px;
 }
 .rst-content dl:not(.docutils) {
-  margin-bottom: 22px;
+  margin-bottom: 20px;
 }
 .rst-content dl:not(.docutils) dt {
   display: inline-block;
-  margin: 5.5px 0;
+  margin: 5px 0;
   font-size: 100%;
   line-height: normal;
   background: #bfe9f9;
   color: #0f80aa;
   border-top: solid 3px #32baed;
-  padding: 5.5px;
+  padding: 5px;
   position: relative;
 }
 .rst-content dl:not(.docutils) dt:before {
@@ -5111,7 +5120,7 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   font-size: 100% !important;
 }
 .rst-content dl:not(.docutils) dl dt {
-  margin-bottom: 5.5px;
+  margin-bottom: 5px;
   border: none;
   border-left: solid 3px #cccccc;
   background: #f0f0f0;
@@ -5150,7 +5159,7 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   display: inline-block;
   color: #27AE60;
   font-size: 80%;
-  padding-left: 22px;
+  padding-left: 20px;
 }
 .rst-content .viewcode-back {
   display: block;
