Fix for header and search position

--- a/sass/_theme_librato.sass
+++ b/sass/_theme_librato.sass
@@ -56,6 +56,7 @@ h2
 .sub-nav
   background-color: #1280A9
   height: 60px
+  margin-top: 9px
   ul
     list-style-type: none
     float: left
@@ -89,6 +90,7 @@ h2
   float: right
   padding-top: 15px
   margin-right: 20px
+  border: none
   .icon
     padding: 6.5px
     padding-left: 12px
@@ -109,6 +111,9 @@ h2
     width: 240px
     border-bottom-right-radius: 3px
     border-top-right-radius: 3px
+    border: none
+    height: 29px
+
 
 
 // W3C School:  www.w3schools.com/css/tryit.asp?filename=trycss_float5
