Make sub-nav headers the same

--- a/sphinx_rtd_theme/static/css/theme.css
+++ b/sphinx_rtd_theme/static/css/theme.css
@@ -5327,7 +5327,7 @@ h2, .rst-content .toctree-wrapper p.caption {
 }
 .sub-nav li a {
   color: #fff;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 14px;
   padding: 20px;
   text-align: center;
