--- a/sass/_theme_librato.sass
+++ b/sass/_theme_librato.sass
@@ -77,7 +77,7 @@ h2
       border-bottom: 5px solid #1A9CC4
     a
       color: #fff
-      font-weight: bold
+      font-weight: normal
       font-size: 14px
       +font-smooth
       padding: 20px
