--- a/sass/_theme_librato.sass
+++ b/sass/_theme_librato.sass
@@ -1,16 +1,13 @@
 
 h1 
-  font-size: 28px
+  font-size: 35px
   font-weight: 100
-  text-rendering: auto
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
+  +font-smooth
 
 h2
-  font-weight: 100
-  text-rendering: auto
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
+  font-size: 28px
+  font-weight: 400
+  +font-smooth
 
 .btn-librato-marketing
   background-color: #0f80aa
@@ -120,3 +117,6 @@ h2
 
 a:visited 
   color: #0f80aa
+
+p 
+  line-height: 1.6
