--- a/sphinx_rtd_theme/static/css/badge_only.css
+++ b/sphinx_rtd_theme/static/css/badge_only.css
@@ -103,7 +103,7 @@ ul.fas li .fa-large:before {
   bottom: 0;
   left: 0;
   width: 300px;
-  color: #fcfcfc;
+  color: #fff;
   background: #1f1d1d;
   border-top: solid 10px #343131;
   font-family: "Proxima Nova", "Helvetica Neue", Arial, sans-serif;
@@ -134,7 +134,7 @@ ul.fas li .fa-large:before {
   clear: both;
 }
 .rst-versions .rst-current-version .fa {
-  color: #fcfcfc;
+  color: #fff;
 }
 .rst-versions .rst-current-version .fa-book {
   float: left;
@@ -156,7 +156,7 @@ ul.fas li .fa-large:before {
 .rst-versions .rst-other-versions {
   font-size: 90%;
   padding: 10px;
-  color: gray;
+  color: #737373;
   display: none;
 }
 .rst-versions .rst-other-versions hr {
@@ -174,7 +174,7 @@ ul.fas li .fa-large:before {
 .rst-versions .rst-other-versions dd a {
   display: inline-block;
   padding: 5px;
-  color: #fcfcfc;
+  color: #fff;
 }
 .rst-versions.rst-badge {
   width: auto;
