--- a/sass/_theme_librato.sass
+++ b/sass/_theme_librato.sass
@@ -111,6 +111,9 @@ h2
     border: none
     height: 29px
 
+.intercom-launcher .intercom-launcher-hovercard
+  display: none!important
+
 
 
 // W3C School:  www.w3schools.com/css/tryit.asp?filename=trycss_float5
